# rust-release-action

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  action.yml
.github/workflows/: ci.yaml  release.yaml
examples/: README.md  basic-release.yml  build-with-verification.yml  complete.yml  installers.yml  linux-packages.yml  multi-platform.yml  package-managers.yml  publish-crate-only.yml  security.yml  supply_chain_security.yml  trusted-publishing.yml  verify-artifacts.yml
scripts/: collect-artifacts.nu  common.nu  dispatch.nu  download-release.nu  extract-changelog.nu  format-release.nu  generate-aur.nu  generate-homebrew.nu  generate-winget.nu  get-release-version.nu  get-version.nu  release-linux-apk.nu  release-linux-deb.nu  release-linux-rpm.nu  release-linux.nu  release-macos-dmg.nu  release-macos.nu  release-windows-msi.nu  release-windows.nu  release.nu  sign-artifact.nu  test-common.nu  test-windows.nu  validate-changelog.nu  validate-version.nu
src/: lib.rs  main.rs  publish.rs  version.rs
tests/: publish_tests.rs  run.nu
tests/nu/: test_archivable.nu  test_changelog.nu  test_collect_artifacts.nu  test_common.nu  test_dispatch.nu  test_errors.nu  test_nfpm.nu  test_pre_build.nu
