[package]
name = "rust-release-action"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
blake2 = "0.10"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
